# ssnd

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  defaults.h  jsonBuilder.h  main.cpp  serverinfo_signature.cpp  serverinfo_signature.h  utils.h
cli-utils/: cliflags.h  cliutils.cpp  cliutils.h  flags.cpp  flags.h
json-builder/: jsonBuilder.cpp  jsonBuilder.h
